src/app/docs/[topic]/[doc]/index.module.scss
@use '@scss/common.scss' as *;

.doc {
  display: flex;
  width: 100%;
  // dumb
  margin-top: calc(var(--base) * -8);
  // dumb
  padding-top: calc(var(--base) * 8);

  @include mid-break {
    display: block;
  }
}

.title {
  @include h2;
  // dumb
  margin-top: calc(var(--base) * -8);
  // dumb
  padding-top: calc(var(--base) * 8);
}

.content {
  margin-right: auto;
  min-width: 0;
  max-width: 900px;

  @include mid-break {
    width: 100%;
  }
}

.mdx {
  @include color-links;

  h2 {
    @include h3;
  }

  h3 {
    @include h4;
  }

  h4 {
    @include h5;
  }

  h5 {
    @include h6;
  }
}

.aside {
  position: sticky;
  flex-shrink: 0;
  top: var(--page-padding-top);
  max-height: calc(100vh - var(--page-padding-top));
  overflow-y: auto;
  padding: 0 0 calc(var(--base) * 2);
  margin-left: 7%;
  width: calc(var(--base) * 12);

  &::-webkit-scrollbar {
    background-color: transparent;
    width: 6px;
  }

  &::-webkit-scrollbar-thumb {
    background-color: transparent;
    border-radius: 3px;
  }

  &:hover {
    &::-webkit-scrollbar-thumb {
      background-color: var(--theme-elevation-100);
    }
  }

  @include large-break {
    width: calc(var(--base) * 10);
  }

  @include mid-break {
    display: none;
  }
}

.next {
  display: block;
  padding: var(--base);
  margin-top: calc(var(--base) * 2);
  text-decoration: none;

  h4 {
    margin: 0;
  }
}

.next--dark {
  composes: next;
  background: var(--theme-purple-100);
  border-bottom: 1px solid var(--theme-purple-500);
  color: var(--theme-purple-800);

  &:hover {
    background: var(--theme-purple-150);
  }

  &:active, &:focus {
    background: var(--theme-purple-200);
  }
}

.next--light {
  composes: next;
  background: var(--theme-purple-200);
  border-bottom: 1px solid var(--theme-purple-600);
  color: var(--theme-purple-800);

  &:hover {
    background: var(--theme-purple-250);
  }

  &:active, &:focus {
    background: var(--theme-purple-300);
  }
}

.nextLabel {
  display: flex;
  align-items: center;

  svg {
    margin-left: calc(var(--base) * .5);
  }
}

.search {
  width: 100% !important;
  margin-top: var(--base) !important;
}

